# Arweave-Today-AI-Podcaster

./: .env.example  .gitignore  INTEGRATION_COMPLETE.md  README.md  main.py  pyproject.toml  requirements.txt  sample_podcast.json  setup.py  web_app.py
arweave_podcaster/: __init__.py
arweave_podcaster/core/: __init__.py  podcast_generator.py
arweave_podcaster/services/: data_service.py  gemini_service.py  video_service.py
arweave_podcaster/utils/: __init__.py  audio_utils.py  config.py  file_utils.py  text_utils.py
data/: today.json
data/04-07-2025/: today.json
docs/: api_reference.md  development.md
scripts/: migrate.py  setup_dev.sh  test_gemini_transcription.py  test_video.py
src/: podcast_generator.py  test_gemini.py
templates/: base.html  index.html
tests/: test_config.py  test_text_utils.py
